--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'Croissant one';
+    src: url('fonts/CroissantOne-Regular.ttf') format('ttf');
+}
+
 html {
     font-size: 18px;
   }
@@ -26,6 +31,7 @@ html {
     box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.05);
     font-family: Verdana, sans-serif;
     font-size: .77rem;
+    font-weight: bold;
   }
   
   .header .logo {
@@ -72,11 +78,15 @@ html {
     border-bottom: 4px solid #ffb78c;
     font-size: 1.44rem;
     letter-spacing: 2px;
+    font-weight: 500;
+    font-family: "Work Sans", Arial, sans-serif;
   }
   
   .banner h1 {
     padding-top: 1.11rem;
     font-size: 11rem;
+    font-weight: 900;
+    font-family: "Abril Fatface", sans-serif;
   }
   
   @media only screen and (max-width: 750px) {
@@ -105,6 +115,7 @@ html {
     padding: 0 25% 4rem 25%;
     background-color: rgb(254, 231, 218);
     color: #4a4a4a;
+    font-family: "Work Sans", serif;
   }
   
   .photo {
@@ -126,6 +137,7 @@ html {
   
   .photo .caption {
     font-style: italic;
+    font-family: "Merriweather", serif;
   }
   
   .photo.first {
@@ -137,6 +149,7 @@ html {
   .journal p {
     padding-bottom: 2.77rem;
     font-size: 1.5rem;
+    line-height: 1.4;
   }
   
   .journal .first-letter {
@@ -145,6 +158,7 @@ html {
     font-family: "Abril Fatface", serif;
     font-size: 7.44rem;
     color: #10b0d8;
+    line-height: 0.87;
   }
   
   .quote {
@@ -156,6 +170,7 @@ html {
     text-align: center;
     font-size: 3.55rem;
     font-weight: 800;
+    line-height: 1.2;
   }
   
   @media only screen and (max-width: 680px) {
@@ -181,10 +196,12 @@ html {
     flex-grow: 1;
     font-style: italic;
     color: #9b9b9b;
+    line-height: 1.5;
   }
   
   footer p {
     padding-bottom: 1.66rem;
+    font-family: "Croissant one", "Merriweather", serif;
   }
   
   footer p:last-child {
